--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -56,6 +56,15 @@ actions:
       value_from_env: HASURA_EVENT_SECRET
   permissions:
   - role: user
+- name: createUserWithToken
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/actionManager'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
 - name: createUsers
   definition:
     kind: synchronous
@@ -264,6 +273,8 @@ custom_types:
   - name: CoordinapeInput
   - name: LogVaultTxInput
   - name: DeleteCircleInput
+  - name: CircleLandingInfoInput
+  - name: CreateUserWithTokenInput
   objects:
   - name: CreateCircleResponse
     relationships:
@@ -427,5 +438,6 @@ custom_types:
       field_mapping:
         id: id
   - name: DeleteCircleResponse
+  - name: CircleLandingInfoResponse
   scalars:
   - name: timestamptz
