--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "airtable": "^0.11.4",
     "aws-sdk": "^2.1072.0",
     "clsx": "1.1.1",
+    "copy-to-clipboard": "^3.3.1",
     "d3-force-3d": "2.3.2",
     "date-fns": "^2.28.0",
     "dedent": "^0.7.0",
@@ -150,7 +151,7 @@
     "@faker-js/faker": "6.2.0",
     "@glazed/types": "0.1.3",
     "@gqty/cli": "2.3.1",
-    "@graphql-eslint/eslint-plugin": "3.8.0",
+    "@graphql-eslint/eslint-plugin": "^3.10.4",
     "@sentry/webpack-plugin": "^1.18.8",
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "^6.4.19",
