--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -2,211 +2,211 @@ table:
   name: circles
   schema: public
 object_relationships:
-  - name: circle_private
-    using:
-      manual_configuration:
-        column_mapping:
-          id: circle_id
-        insertion_order: null
-        remote_table:
-          name: circle_private
-          schema: public
-  - name: organization
-    using:
-      foreign_key_constraint_on: protocol_id
+- name: circle_private
+  using:
+    manual_configuration:
+      column_mapping:
+        id: circle_id
+      insertion_order: null
+      remote_table:
+        name: circle_private
+        schema: public
+- name: organization
+  using:
+    foreign_key_constraint_on: protocol_id
 array_relationships:
-  - name: api_keys
-    using:
-      foreign_key_constraint_on:
-        column: circle_id
-        table:
-          name: circle_api_keys
-          schema: public
-  - name: burns
-    using:
-      foreign_key_constraint_on:
-        column: circle_id
-        table:
-          name: burns
-          schema: public
-  - name: circle_metadata
-    using:
-      foreign_key_constraint_on:
-        column: circle_id
-        table:
-          name: circle_metadata
-          schema: public
-  - name: epochs
-    using:
-      manual_configuration:
-        column_mapping:
-          id: circle_id
-        insertion_order: null
-        remote_table:
-          name: epoches
-          schema: public
-  - name: integrations
-    using:
-      foreign_key_constraint_on:
-        column: circle_id
-        table:
-          name: circle_integrations
-          schema: public
-  - name: nominees
-    using:
-      foreign_key_constraint_on:
-        column: circle_id
-        table:
-          name: nominees
-          schema: public
-  - name: pending_token_gifts
-    using:
-      foreign_key_constraint_on:
-        column: circle_id
-        table:
-          name: pending_token_gifts
-          schema: public
-  - name: token_gifts
-    using:
-      foreign_key_constraint_on:
-        column: circle_id
-        table:
-          name: token_gifts
-          schema: public
-  - name: users
-    using:
-      foreign_key_constraint_on:
-        column: circle_id
-        table:
-          name: users
-          schema: public
-  - name: vault_transactions
-    using:
-      foreign_key_constraint_on:
-        column: circle_id
-        table:
-          name: vault_transactions
-          schema: public
+- name: api_keys
+  using:
+    foreign_key_constraint_on:
+      column: circle_id
+      table:
+        name: circle_api_keys
+        schema: public
+- name: burns
+  using:
+    foreign_key_constraint_on:
+      column: circle_id
+      table:
+        name: burns
+        schema: public
+- name: circle_metadata
+  using:
+    foreign_key_constraint_on:
+      column: circle_id
+      table:
+        name: circle_metadata
+        schema: public
+- name: epochs
+  using:
+    manual_configuration:
+      column_mapping:
+        id: circle_id
+      insertion_order: null
+      remote_table:
+        name: epoches
+        schema: public
+- name: integrations
+  using:
+    foreign_key_constraint_on:
+      column: circle_id
+      table:
+        name: circle_integrations
+        schema: public
+- name: nominees
+  using:
+    foreign_key_constraint_on:
+      column: circle_id
+      table:
+        name: nominees
+        schema: public
+- name: pending_token_gifts
+  using:
+    foreign_key_constraint_on:
+      column: circle_id
+      table:
+        name: pending_token_gifts
+        schema: public
+- name: token_gifts
+  using:
+    foreign_key_constraint_on:
+      column: circle_id
+      table:
+        name: token_gifts
+        schema: public
+- name: users
+  using:
+    foreign_key_constraint_on:
+      column: circle_id
+      table:
+        name: users
+        schema: public
+- name: vault_transactions
+  using:
+    foreign_key_constraint_on:
+      column: circle_id
+      table:
+        name: vault_transactions
+        schema: public
 select_permissions:
-  - permission:
-      columns:
-        - alloc_text
-        - default_opt_in
-        - id
-        - is_verified
-        - logo
-        - min_vouches
-        - name
-        - nomination_days_limit
-        - team_sel_text
-        - team_selection
-        - token_name
-        - vouching
-        - vouching_text
-      filter:
-        api_keys:
-          _and:
-            - hash:
-                _eq: X-Hasura-Api-Key-Hash
-            - read_circle:
-                _eq: true
-      limit: 5
-    role: api-user
-  - permission:
-      columns:
-        - alloc_text
-        - auto_opt_out
-        - created_at
-        - default_opt_in
-        - deleted_at
-        - fixed_payment_token_type
-        - id
-        - is_verified
-        - logo
-        - min_vouches
-        - name
-        - nomination_days_limit
-        - only_giver_vouch
-        - protocol_id
-        - team_sel_text
-        - team_selection
-        - token_name
-        - updated_at
-        - vouching
-        - vouching_text
-      filter:
-        organization:
-          circles:
-            users:
-              _and:
-                - profile:
-                    id:
-                      _eq: X-Hasura-User-Id
-                - deleted_at:
-                    _is_null: true
-    role: user
-update_permissions:
-  - permission:
-      check: null
-      columns:
-        - alloc_text
-        - discord_webhook
-        - logo
-        - min_vouches
-        - name
-        - nomination_days_limit
-        - team_sel_text
-        - team_selection
-        - token_name
-        - vouching
-        - vouching_text
-      filter:
-        api_keys:
-          _and:
-            - hash:
-                _eq: X-Hasura-Api-Key-Hash
-            - update_circle:
-                _eq: true
-    role: api-user
-  - permission:
-      check: null
-      columns:
-        - alloc_text
-        - auto_opt_out
-        - default_opt_in
-        - discord_webhook
-        - fixed_payment_token_type
-        - is_verified
-        - logo
-        - min_vouches
-        - name
-        - nomination_days_limit
-        - only_giver_vouch
-        - team_sel_text
-        - team_selection
-        - token_name
-        - vouching
-        - vouching_text
-      filter:
-        users:
-          _and:
-            - role:
-                _eq: 1
+- permission:
+    columns:
+    - alloc_text
+    - default_opt_in
+    - id
+    - is_verified
+    - logo
+    - min_vouches
+    - name
+    - nomination_days_limit
+    - team_sel_text
+    - team_selection
+    - token_name
+    - vouching
+    - vouching_text
+    filter:
+      api_keys:
+        _and:
+        - hash:
+            _eq: X-Hasura-Api-Key-Hash
+        - read_circle:
+            _eq: true
+    limit: 5
+  role: api-user
+- permission:
+    columns:
+    - alloc_text
+    - auto_opt_out
+    - created_at
+    - default_opt_in
+    - deleted_at
+    - fixed_payment_token_type
+    - id
+    - is_verified
+    - logo
+    - min_vouches
+    - name
+    - nomination_days_limit
+    - only_giver_vouch
+    - protocol_id
+    - team_sel_text
+    - team_selection
+    - token_name
+    - updated_at
+    - vouching
+    - vouching_text
+    filter:
+      organization:
+        circles:
+          users:
+            _and:
             - profile:
                 id:
                   _eq: X-Hasura-User-Id
-    role: user
+            - deleted_at:
+                _is_null: true
+  role: user
+update_permissions:
+- permission:
+    check: null
+    columns:
+    - alloc_text
+    - discord_webhook
+    - logo
+    - min_vouches
+    - name
+    - nomination_days_limit
+    - team_sel_text
+    - team_selection
+    - token_name
+    - vouching
+    - vouching_text
+    filter:
+      api_keys:
+        _and:
+        - hash:
+            _eq: X-Hasura-Api-Key-Hash
+        - update_circle:
+            _eq: true
+  role: api-user
+- permission:
+    check: null
+    columns:
+    - alloc_text
+    - auto_opt_out
+    - default_opt_in
+    - discord_webhook
+    - fixed_payment_token_type
+    - is_verified
+    - logo
+    - min_vouches
+    - name
+    - nomination_days_limit
+    - only_giver_vouch
+    - team_sel_text
+    - team_selection
+    - token_name
+    - vouching
+    - vouching_text
+    filter:
+      users:
+        _and:
+        - role:
+            _eq: 1
+        - profile:
+            id:
+              _eq: X-Hasura-User-Id
+  role: user
 event_triggers:
-  - definition:
-      enable_manual: false
-      insert:
-        columns: '*'
-    headers:
-      - name: verification_key
-        value_from_env: HASURA_EVENT_SECRET
-    name: createCircleCRM
-    retry_conf:
-      interval_sec: 3600
-      num_retries: 5
-      timeout_sec: 60
-    webhook: '{{HASURA_API_BASE_URL}}/event_triggers/eventManager'
+- definition:
+    enable_manual: false
+    insert:
+      columns: "*"
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: createCircleCRM
+  retry_conf:
+    interval_sec: 3600
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/eventManager"
