--- a/hasura/metadata/databases/default/tables/public_vaults.yaml
+++ b/hasura/metadata/databases/default/tables/public_vaults.yaml
@@ -41,14 +41,14 @@ select_permissions:
     filter:
       protocol:
         circles:
-          users:
-            _and:
-            - deleted_at:
-                _is_null: true
-            - profile:
-                id:
-                  _eq: X-Hasura-User-Id
-            - circle:
-                deleted_at:
+          _and:
+          - deleted_at:
+              _is_null: true
+          - users:
+              _and:
+              - deleted_at:
                   _is_null: true
+              - profile:
+                  id:
+                    _eq: X-Hasura-User-Id
   role: user
