--- a/hasura/metadata/databases/default/tables/public_vouches.yaml
+++ b/hasura/metadata/databases/default/tables/public_vouches.yaml
@@ -2,64 +2,64 @@ table:
   name: vouches
   schema: public
 object_relationships:
-  - name: nominee
-    using:
-      manual_configuration:
-        column_mapping:
-          nominee_id: id
-        insertion_order: null
-        remote_table:
-          name: nominees
-          schema: public
-  - name: voucher
-    using:
-      manual_configuration:
-        column_mapping:
-          voucher_id: id
-        insertion_order: null
-        remote_table:
-          name: users
-          schema: public
+- name: nominee
+  using:
+    manual_configuration:
+      column_mapping:
+        nominee_id: id
+      insertion_order: null
+      remote_table:
+        name: nominees
+        schema: public
+- name: voucher
+  using:
+    manual_configuration:
+      column_mapping:
+        voucher_id: id
+      insertion_order: null
+      remote_table:
+        name: users
+        schema: public
 select_permissions:
-  - permission:
-      columns:
-        - created_at
-        - id
-        - nominee_id
-        - updated_at
-        - voucher_id
-      filter:
-        voucher:
-          circle:
-            users:
-              profile:
-                id:
-                  _eq: X-Hasura-User-Id
-    role: user
+- permission:
+    columns:
+    - created_at
+    - id
+    - nominee_id
+    - updated_at
+    - voucher_id
+    filter:
+      voucher:
+        circle:
+          users:
+            profile:
+              id:
+                _eq: X-Hasura-User-Id
+  role: user
 event_triggers:
-  - definition:
-      enable_manual: false
-      insert:
-        columns: '*'
-    headers:
-      - name: verification_key
-        value_from_env: HASURA_EVENT_SECRET
-    name: vouchDiscord
-    retry_conf:
-      interval_sec: 3600
-      num_retries: 5
-      timeout_sec: 60
-    webhook: '{{HASURA_API_BASE_URL}}/event_triggers/eventManager'
-  - definition:
-      enable_manual: false
-      insert:
-        columns: '*'
-    headers:
-      - name: verification_key
-        value_from_env: HASURA_EVENT_SECRET
-    name: vouchTelegram
-    retry_conf:
-      interval_sec: 3600
-      num_retries: 5
-      timeout_sec: 60
-    webhook: '{{HASURA_API_BASE_URL}}/event_triggers/eventManager'
+- definition:
+    enable_manual: false
+    insert:
+      columns: "*"
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: vouchDiscord
+  retry_conf:
+    interval_sec: 3600
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/eventManager"
+- definition:
+    enable_manual: false
+    insert:
+      columns: "*"
+  headers:
+  - name: verification_key
+    value_from_env: HASURA_EVENT_SECRET
+  name: vouchTelegram
+  retry_conf:
+    interval_sec: 3600
+    num_retries: 5
+    timeout_sec: 60
+  webhook: "{{HASURA_API_BASE_URL}}/event_triggers/eventManager"
