--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -13,6 +13,7 @@
 - "!include public_nominees.yaml"
 - "!include public_pending_gift_private.yaml"
 - "!include public_pending_token_gifts.yaml"
+- "!include public_pending_vault_transactions.yaml"
 - "!include public_personal_access_tokens.yaml"
 - "!include public_profiles.yaml"
 - "!include public_protocols.yaml"
