--- a/hasura/metadata/databases/default/tables/public_pending_vault_transactions.yaml
+++ b/hasura/metadata/databases/default/tables/public_pending_vault_transactions.yaml
@@ -1,10 +1,34 @@
 table:
   name: pending_vault_transactions
   schema: public
+object_relationships:
+- name: distribution
+  using:
+    foreign_key_constraint_on: distribution_id
+- name: organization
+  using:
+    foreign_key_constraint_on: org_id
+- name: profile
+  using:
+    foreign_key_constraint_on: created_by
+- name: vault_tx_type
+  using:
+    foreign_key_constraint_on: tx_type
 insert_permissions:
 - permission:
     backend_only: false
-    check: {}
+    check:
+      organization:
+        circles:
+          users:
+            _and:
+            - profile:
+                id:
+                  _eq: X-Hasura-User-Id
+            - role:
+                _eq: 1
+            - deleted_at:
+                _is_null: true
     columns:
     - chain_id
     - claim_id
