Update actions to handle circle API key permissions
Removed the update permissions on the raw Hasura tables and added permissions + validation logic in the Action handlers to allow the api-user role to call them

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -167,6 +167,7 @@ actions:
     - name: verification_key
       value_from_env: HASURA_EVENT_SECRET
   permissions:
+  - role: api-user
   - role: user
 - name: updateEpoch
   definition:
@@ -244,6 +245,7 @@ actions:
     - name: verification_key
       value_from_env: HASURA_EVENT_SECRET
   permissions:
+  - role: api-user
   - role: user
 custom_types:
   enums: []
