circles.deleted_at (#1196) (#1213)
Co-authored-by: sshmm <s.shawky92@gmail.com>
Co-authored-by: sshmm <34943689+sshmm@users.noreply.github.com>

--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -118,6 +118,7 @@ select_permissions:
     - auto_opt_out
     - created_at
     - default_opt_in
+    - deleted_at
     - fixed_payment_token_type
     - id
     - is_verified
