--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -85,6 +85,13 @@ actions:
   permissions:
   - role: user
   comment: Log offchain information for vault transactions
+- name: deleteCircle
+  definition:
+    kind: synchronous
+    handler: '{{HASURA_API_BASE_URL}}/actions/actionManager'
+    headers:
+    - name: verification_key
+      value_from_env: HASURA_EVENT_SECRET
 - name: deleteEpoch
   definition:
     kind: synchronous
