--- a/hasura/metadata/databases/default/tables/public_distributions.yaml
+++ b/hasura/metadata/databases/default/tables/public_distributions.yaml
@@ -2,18 +2,12 @@ table:
   name: distributions
   schema: public
 object_relationships:
-- name: distribution_creator
-  using:
-    manual_configuration:
-      column_mapping:
-        created_by: id
-      insertion_order: null
-      remote_table:
-        name: profiles
-        schema: public
 - name: epoch
   using:
     foreign_key_constraint_on: epoch_id
+- name: profile
+  using:
+    foreign_key_constraint_on: created_by
 - name: vault
   using:
     foreign_key_constraint_on: vault_id
