add missing user role perm for deleteCircle

--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -92,6 +92,8 @@ actions:
     headers:
     - name: verification_key
       value_from_env: HASURA_EVENT_SECRET
+  permissions:
+  - role: user
 - name: deleteEpoch
   definition:
     kind: synchronous
