--- a/hasura/metadata/databases/default/tables/public_distributions.yaml
+++ b/hasura/metadata/databases/default/tables/public_distributions.yaml
@@ -5,6 +5,9 @@ object_relationships:
 - name: epoch
   using:
     foreign_key_constraint_on: epoch_id
+- name: profile
+  using:
+    foreign_key_constraint_on: created_by
 - name: vault
   using:
     foreign_key_constraint_on: vault_id
