--- a/hasura/metadata/databases/default/tables/public_claims.yaml
+++ b/hasura/metadata/databases/default/tables/public_claims.yaml
@@ -18,9 +18,15 @@ insert_permissions:
 - permission:
     backend_only: false
     check:
-      distribution:
-        created_by:
-          _eq: X-Hasura-User-Id
+      _and:
+      - distribution:
+          created_by:
+            _eq: X-Hasura-User-Id
+      - distribution:
+          epoch:
+            circle:
+              deleted_at:
+                _is_null: true
     columns:
     - address
     - amount
