Allow option to read dev seed phrase from ENV

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ IMAGES_AWS_BUCKET=coordinape
 IMAGE_DIR=assets/static/images/
 # separate allowed domains with commas
 SIWE_ALLOWED_DOMAINS=localhost:3000,
+DEV_SEED_PHRASE="test test test test test test test test test test test junk"
 
 # Default local variables
 LOCAL_HASURA_PORT=8080
