Update claims insert perm (#1224)
* Update claims insert perms

update perms to only allow insertion when circle is still active

* slight refactor

--- a/hasura/metadata/databases/default/tables/public_claims.yaml
+++ b/hasura/metadata/databases/default/tables/public_claims.yaml
@@ -19,8 +19,13 @@ insert_permissions:
     backend_only: false
     check:
       distribution:
-        created_by:
-          _eq: X-Hasura-User-Id
+        _and:
+        - created_by:
+            _eq: X-Hasura-User-Id
+        - epoch:
+            circle:
+              deleted_at:
+                _is_null: true
     columns:
     - address
     - amount
