--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@spruceid/siwe-parser": "^2.0.0",
     "@stitches/react": "1.2.6",
     "@storybook/react": "^6.4.19",
+    "@typeform/embed-react": "^1.18.0",
     "@web3-react/core": "6.1.9",
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/walletconnect-connector": "6.2.13",
