tweak permissions for pending txs
- allow creating a pending tx with a blank org_id
- check claim tx recipient address against address stored in db, to prevent linking to the wrong tx

--- a/hasura/metadata/databases/default/tables/public_pending_vault_transactions.yaml
+++ b/hasura/metadata/databases/default/tables/public_pending_vault_transactions.yaml
@@ -18,20 +18,23 @@ insert_permissions:
 - permission:
     backend_only: false
     check:
-      organization:
-        circles:
-          _and:
-          - deleted_at:
-              _is_null: true
-          - users:
-              _and:
-              - profile:
-                  id:
-                    _eq: X-Hasura-User-Id
-              - role:
-                  _eq: 1
-              - deleted_at:
-                  _is_null: true
+      _or:
+      - org_id:
+          _is_null: true
+      - organization:
+          circles:
+            _and:
+            - deleted_at:
+                _is_null: true
+            - users:
+                _and:
+                - profile:
+                    id:
+                      _eq: X-Hasura-User-Id
+                - role:
+                    _eq: 1
+                - deleted_at:
+                    _is_null: true
     columns:
     - chain_id
     - claim_id
