Parse out - as workaround for bash's handling of spaces

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ IMAGE_DIR=assets/static/images/
 # separate allowed domains with commas
 SIWE_ALLOWED_DOMAINS=localhost:3000,
 
+# Note: use dashes instead of spaces for mnemonic since bash parses spaces incorrectly
+DEV_SEED_PHRASE="test-test-test-test-test-test-test-test-test-test-test-junk"
+
 # Default local variables
 LOCAL_HASURA_PORT=8080
 LOCAL_POSTGRES_PORT=5432
