--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "luxon": "2.3.1",
     "node-fetch": "2.6.7",
     "notistack": "1.0.10",
+    "papaparse": "^5.3.2",
     "polished": "4.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -173,6 +174,7 @@
     "@types/lodash": "4.14.168",
     "@types/luxon": "^2.3.1",
     "@types/node": "12.20.1",
+    "@types/papaparse": "^5.3.3",
     "@types/react": "17.0.27",
     "@types/react-dom": "17.0.9",
     "@types/react-router-dom": "5.1.7",
