Add fixed_payment_vault_id to select permissions

--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -92,6 +92,7 @@ select_permissions:
     columns:
     - alloc_text
     - default_opt_in
+    - fixed_payment_vault_id
     - id
     - is_verified
     - logo
