--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -178,6 +178,7 @@ update_permissions:
     - default_opt_in
     - discord_webhook
     - fixed_payment_token_type
+    - fixed_payment_vault_id
     - is_verified
     - logo
     - min_vouches
