--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -92,6 +92,7 @@ select_permissions:
     columns:
     - alloc_text
     - default_opt_in
+    - fixed_payment_vault_id
     - id
     - is_verified
     - logo
@@ -120,6 +121,7 @@ select_permissions:
     - default_opt_in
     - deleted_at
     - fixed_payment_token_type
+    - fixed_payment_vault_id
     - id
     - is_verified
     - logo
@@ -176,6 +178,7 @@ update_permissions:
     - default_opt_in
     - discord_webhook
     - fixed_payment_token_type
+    - fixed_payment_vault_id
     - is_verified
     - logo
     - min_vouches
