--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@apollo/client": "3.5.7",
     "@craco/craco": "6.4.3",
     "@date-io/luxon": "1.3.13",
+    "@gnosis.pm/safe-apps-provider": "0.12.0",
+    "@gnosis.pm/safe-apps-sdk": "7.6.0",
     "@gqty/react": "2.1.0",
     "@hcaptcha/react-hcaptcha": "0.3.7",
     "@hookform/resolvers": "^2.8.8",
@@ -35,6 +37,7 @@
     "@stitches/react": "1.2.6",
     "@storybook/react": "^6.4.19",
     "@typeform/embed-react": "^1.18.0",
+    "@web3-react/abstract-connector": "6.0.7",
     "@web3-react/core": "6.1.9",
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/walletconnect-connector": "6.2.13",
