--- a/package.json
+++ b/package.json
@@ -220,6 +220,7 @@
     "ttypescript": "^1.5.13",
     "typescript": "4.4.3",
     "util": "0.12.4",
+    "vercel": "25.1.0",
     "web3-provider-engine": "15.0.12",
     "webpack": "5"
   }
