--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -140,13 +140,15 @@ select_permissions:
       _and:
       - deleted_at:
           _is_null: true
-      - users:
-          _and:
-          - profile:
-              id:
-                _eq: X-Hasura-User-Id
-          - deleted_at:
-              _is_null: true
+      - organization:
+          circles:
+            users:
+              _and:
+              - profile:
+                  id:
+                    _eq: X-Hasura-User-Id
+              - deleted_at:
+                  _is_null: true
   role: user
 event_triggers:
 - definition:
