Admin circle page danger zone (#1262)
* deletecircle handling and nvigation

* update overview menu

* update myorg query

* exclude deleted circles in circle table permission

* fix circles table permission

--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -137,15 +137,18 @@ select_permissions:
     - vouching
     - vouching_text
     filter:
-      organization:
-        circles:
-          users:
-            _and:
-            - profile:
-                id:
-                  _eq: X-Hasura-User-Id
-            - deleted_at:
-                _is_null: true
+      _and:
+      - deleted_at:
+          _is_null: true
+      - organization:
+          circles:
+            users:
+              _and:
+              - profile:
+                  id:
+                    _eq: X-Hasura-User-Id
+              - deleted_at:
+                  _is_null: true
   role: user
 event_triggers:
 - definition:
