--- a/hasura/metadata/databases/default/tables/public_claims.yaml
+++ b/hasura/metadata/databases/default/tables/public_claims.yaml
@@ -51,16 +51,9 @@ select_permissions:
     - txHash
     - updated_at
     filter:
-      distribution:
-        epoch:
-          circle:
-            users:
-              _and:
-              - deleted_at:
-                  _is_null: true
-              - profile:
-                  id:
-                    _eq: X-Hasura-User-Id
+      profile:
+        id:
+          _eq: X-Hasura-User-Id
   role: user
 update_permissions:
 - permission:
