Allow Deleted Users to process Claims (#1296)
* Allow Deleted Users to process Claims

Motivation

Deleted Users do not have access to old epoch data. This refactor allows
us to render claims from users who have been deleted and allows users to
process those claims in our frontend.

Circle and Org names have been replace with 'Uknown' but we could
just leave them blank

Test Plan

Existing unit and e2e tests still pass.

The rest of the testing is manual:
1. Fund a vault and create some distributions
2. delete a user who received funds from those distributions
3. log into the frontend as that user and attempt to claim the funds
4. verify that the claim is successful and the claim row moves to the
   history table

* bugfix: re-add access to other circle member claims

* Address Review from @crabsinger

* allow deleted users to query distributions they have claims for

Co-authored-by: Lawrence Wang <l@lw.io>

--- a/hasura/metadata/databases/default/tables/public_claims.yaml
+++ b/hasura/metadata/databases/default/tables/public_claims.yaml
@@ -51,16 +51,20 @@ select_permissions:
     - txHash
     - updated_at
     filter:
-      distribution:
-        epoch:
-          circle:
-            users:
-              _and:
-              - deleted_at:
-                  _is_null: true
-              - profile:
-                  id:
-                    _eq: X-Hasura-User-Id
+      _or:
+      - profile:
+          id:
+            _eq: X-Hasura-User-Id
+      - distribution:
+          epoch:
+            circle:
+              users:
+                _and:
+                - deleted_at:
+                    _is_null: true
+                - profile:
+                    id:
+                      _eq: X-Hasura-User-Id
   role: user
 update_permissions:
 - permission:
