--- a/hasura/metadata/actions.yaml
+++ b/hasura/metadata/actions.yaml
@@ -112,6 +112,15 @@ actions:
           value_from_env: HASURA_EVENT_SECRET
     permissions:
       - role: user
+  - name: deleteContribution
+    definition:
+      kind: synchronous
+      handler: '{{HASURA_API_BASE_URL}}/actions/actionManager'
+      headers:
+      - name: verification_key
+        value_from_env: HASURA_EVENT_SECRET
+    permissions:
+    - role: user
   - name: deleteUser
     definition:
       kind: synchronous
@@ -277,6 +286,7 @@ custom_types:
     - name: DeleteCircleInput
     - name: CircleLandingInfoInput
     - name: CreateUserWithTokenInput
+    - name: DeleteContributionInput
   objects:
     - name: CreateCircleResponse
       relationships:
