--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "=14"
   },
   "dependencies": {
+    "@amplitude/node": "^1.10.1",
     "@apollo/client": "3.5.7",
     "@craco/craco": "6.4.3",
     "@date-io/luxon": "1.3.13",
