--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,7 @@ IMAGES_AWS_BUCKET=coordinape
 #AIRTABLE_CRM_BASE_ID=...
 #AIRTABLE_CRM_TABLE_ID=CircleAdmins
 #AMPLITUDE_API_KEY=....
+#MIXPANEL_PROJECT_TOKEN=...
 
 # CI Environment - added as env vars in github if no conflicts exist
 #NODE_HASURA_URL=http://localhost:8081/v1/graphql
