--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -120,6 +120,7 @@ select_permissions:
     - created_at
     - default_opt_in
     - deleted_at
+    - discord_webhook
     - fixed_payment_token_type
     - fixed_payment_vault_id
     - id
