--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "docker:clean": "docker compose --profile dev down -v",
     "cy:dev": "yarn test:ci --cypress-only --local",
     "cy:run": "yarn test:ci --cypress-only",
-    "start": "craco start",
+    "start": "./scripts/serve.sh",
     "build": "craco build",
     "build:local": "craco  --max_old_space_size=4096 build",
     "build:gzip": "craco build && gzipper --verbose ./build",
@@ -169,6 +169,7 @@
     "@types/debug": "4.1.7",
     "@types/dedent": "^0.7.0",
     "@types/ethereumjs-util": "6.1.0",
+    "@types/express": "^4.17.13",
     "@types/faker": "^5.5.9",
     "@types/jest": "26.0.20",
     "@types/lodash": "4.14.168",
@@ -202,13 +203,16 @@
     "eslint-plugin-unicorn": "41.0.0",
     "ethereumjs-wallet": "1.0.2",
     "execa": "6.0.0",
+    "express": "4.18.1",
     "figma-api": "1.9.2",
     "hasura-cli": "2.2.0",
     "http-browserify": "1.7.0",
+    "http-proxy-middleware": "2.0.6",
     "https-browserify": "1.0.0",
     "husky": "4.3.8",
     "jest-ts-auto-mock": "^2.0.0",
     "lint-staged": "10.5.4",
+    "nodemon": "2.0.19",
     "os-browserify": "0.3.0",
     "prettier": "2.4.1",
     "pretty-quick": "3.1.1",
