Add Interaction_Events table and reporting (#1339)
* more cleanup

* interaction_events and amplitude trigger to fire events to amplitude

* Log createCircle interaction events

* fixing createCircle compilation issue and adding newMember / invitedMember fields to login event

* sending user events to mixpanel also

* pushing event data up to top level instead of nesting

* Clean up and compact migrations

* Add interaction events for adding users

* fix old user_events refs

* reset triggers

* switching to bulk insert events, cleaning up other PR feedback

* switch to throwing errors when the api keys aren't set

* reduce invitedMember/brandNew to just brandNew

Co-authored-by: CryptoGraffe <graffe@graffe.co>

--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,8 @@ IMAGES_AWS_BUCKET=coordinape
 #AIRTABLE_API_KEY=...
 #AIRTABLE_CRM_BASE_ID=...
 #AIRTABLE_CRM_TABLE_ID=CircleAdmins
+#AMPLITUDE_API_KEY=....
+#MIXPANEL_PROJECT_TOKEN=...
 
 # CI Environment - added as env vars in github if no conflicts exist
 #NODE_HASURA_URL=http://localhost:8081/v1/graphql
