--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "=14"
   },
   "dependencies": {
+    "@amplitude/node": "^1.10.1",
     "@apollo/client": "3.5.7",
     "@craco/craco": "6.4.3",
     "@date-io/luxon": "1.3.13",
@@ -55,6 +56,7 @@
     "keccak": "^3.0.2",
     "lodash": "4.17.21",
     "luxon": "2.3.1",
+    "mixpanel": "^0.17.0",
     "node-fetch": "2.6.7",
     "notistack": "1.0.10",
     "papaparse": "^5.3.2",
