Update Contributions table to decouple epochs
The contributions table will rely on a link to a specific circle instead
of a specific epoch and will use a possibly user-adjustable datetime_created
field to determine which epoch a contribution should be a part of.

Future Work

Build the Contributions interface on top of this table

--- a/hasura/metadata/databases/default/tables/public_circles.yaml
+++ b/hasura/metadata/databases/default/tables/public_circles.yaml
@@ -36,6 +36,13 @@ array_relationships:
         table:
           schema: public
           name: circle_metadata
+  - name: contributions
+    using:
+      foreign_key_constraint_on:
+        column: circle_id
+        table:
+          schema: public
+          name: contributions
   - name: epochs
     using:
       manual_configuration:
